fixed bug on safari

--- a/styles/IngredientsTemplete.module.css
+++ b/styles/IngredientsTemplete.module.css
@@ -13,15 +13,14 @@
   width: calc(var(--width) * 0.9);
   height: calc(var(--width) * 0.9);
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .avataOutline {
   width: 93%;
   height: 93%;
   background-color: var(--color-main);
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   border-radius: 50%;
   overflow: hidden;
 }
@@ -29,9 +28,8 @@
   width: 90%;
   height: 90%;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+
+ 
   border-radius: 50%;
   overflow: hidden;
 }
