--- a/styles/Steps.module.css
+++ b/styles/Steps.module.css
@@ -20,6 +20,7 @@
 .body {
   display: flex;
   transition: all 300ms ease-in-out;
+    align-items: center;
 }
 .step {
   width: 130px;
